backend-manifest/05-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: maily
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: suhannugul/email-agent:1e2ad8d2250a40e5a95ff679071aefbc25e8ba2b
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"
