backend-manifest/04-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: maily
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30001
      protocol: TCP
